--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@google-cloud/storage": "^5.1.0",
+    "@google-cloud/storage": "^5.2.0",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "connect-history-api-fallback": "^1.6.0",
@@ -25,15 +25,15 @@
     "find-config": "^1.0.0",
     "formidable": "^1.2.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.7.8",
+    "mongoose": "^5.10.0",
     "mongoose-seed": "^0.6.0",
     "multer": "^1.4.2",
     "passport": "^0.4.1",
-    "passport-cas": "^0.1.1",
     "serve-static": "^1.14.1",
     "throng": "^4.0.0"
   },
   "devDependencies": {
-    "nodemon": "^1.19.4"
+    "nodemon": "^2.0.4",
+    "passport-cas": "^0.1.1"
   }
 }
